--- a/css/zdo_drawer_menu.css
+++ b/css/zdo_drawer_menu.css
@@ -13,7 +13,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 
 .zdo_drawer_menu a {
-	color: #ffffff;
+	color: #000000;
   text-decoration: none;
 }
 
@@ -49,7 +49,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 	text-align: center;
 	padding-top: 4vw;
 	padding-bottom: 4vw;
-	color: #ffffff;
+	color: #000000;
 	box-sizing: border-box;
 }
 
@@ -158,7 +158,7 @@ margin-right: 0;
   top: 0;
   right: 0;
   z-index: 1000;
-  background-color: #424242;
+  background-color: #c9e265;
 		overflow: scroll;
 
 }
