Ajout Menu Slide page Accueil

--- a/css/res.css
+++ b/css/res.css
@@ -1,8 +1,4 @@
  @charset "UTF-8";
-/*--------------------------------------------------------------------
-=== [レスポンシブ] ====================================
- -------------------------------------------------------------------*/
-
 .spHide {
 	display: block;
 }
@@ -49,6 +45,9 @@ header h1 {
 }
 .zdo_drawer_nav > li {
 	margin-bottom: 20px;
+}
+.space {
+	margin-top: 30%;
 }
 .zdo_drawer_nav {
 	font-size: 4vw;
