--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,12 @@ body::-webkit-scrollbar-thumb {
 	border-bottom: none;
 	margin-bottom: -1px;
 }
+#lip {
+	color: rgb(255, 255, 255);
+}
+#lip:hover {
+	color: rgb(0, 0, 0)
+}
 #newsArea .panel.is-show {
 	display: block;
 }
