--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,59 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700");
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://use.fontawesome.com/releases/v5.7.1/css/all.css);
+body,
+html {
+    margin: 0;
+    height: 100%;
+    scroll-behavior: smooth;
+}
+body {
+    -webkit-animation: fadein 4s;
+    -moz-animation: fadein 4s;
+    -ms-animation: fadein 4s;
+    -o-animation: fadein 4s;
+    animation: fadein 4s;
+}
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-ms-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .fvMovie {
 	height: 100vh;
 	background-color: #333;
@@ -813,6 +866,12 @@ footer .socials {
 .inner h3{ 
 	text-align: center;
 	font-size: 30px;
+}
+.logoacc {
+	position: absolute;
+	top: 20%;
+	left: 34%;
+	z-index: 9999;
 }
 footer .socials ul {
     color: #fff;
