--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,12 @@ background-color: inherit;
 color: #1b1b1b;
 box-shadow: 0px 10px 5px -3px rgba(0,0,0,0.1);
 }
-
+.flex {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
 
 
 
