--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,23 @@ box-shadow: 0px 10px 5px -3px rgba(0,0,0,0.1);
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
+	flex-wrap: wrap;
+}
+.sizepain {
+	width: 300px;
+}
+.sizeboxpain {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin-top: 50px;
+	margin-left: 30px;
+	margin-right: 30px;
+}
+.sizeboxpain p {
+	font-size: 30px;
 }
 
 
