--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ body::-webkit-scrollbar-thumb {
 	left: 0vw;
 }
 
-	.newsMoreBtn {
+.newsMoreBtn {
 text-align: center;
 font-family:minion-pro-display,"ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "游明朝体", "Yu Mincho", YuMincho, "Noto Sans Japanese","Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ", Meiryo,"ＭＳ Ｐゴシック", Osaka, sans-serif;
 }
@@ -383,6 +383,9 @@ box-shadow: 0px 10px 5px -3px rgba(0,0,0,0.1);
 }
 .sizepain {
 	width: 300px;
+}
+.sizegat {
+	width: 400px;
 }
 .sizeboxpain {
 	display: flex;
