--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,21 @@ box-shadow: 0px 10px 5px -3px rgba(0,0,0,0.1);
 .sizepain {
 	width: 300px;
 }
+.sizeat {
+	width: 700px;
+}
 .sizegat {
 	width: 400px;
+}
+.titregat {
+	font-size: 35px;
+	text-align: center;
+	word-wrap: normal;
+}
+.titregat2 {
+	font-size: 25px;
+	text-align: center;
+	word-wrap: normal;
 }
 .sizeboxpain {
 	display: flex;
