--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ body,
 html {
     margin: 0;
     height: 100%;
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
+	cursor: url("../image/bag.png"),auto;
 }
 body {
     -webkit-animation: fadein 4s;
