--- a/css/base.css
+++ b/css/base.css
@@ -25,7 +25,7 @@ header {
 	position: fixed;
 	z-index: 20;
 	width: 100%;
-	background-color: #ffffff;
+	background-color: rgba(255, 255, 255, .9);
 }
 
 header h1 {
