--- a/css/leaf.css
+++ b/css/leaf.css
@@ -165,7 +165,7 @@ div#leafVisual div.box h1.ttl {
   font-size: 60px;
   line-height: 1em;
   letter-spacing: 10px;
-  text-align: left;
+  text-align: center;
   word-wrap: break-word;
 }
 
@@ -190,7 +190,7 @@ vertical-align: bottom;
 div#leafVisual div.box h1.ttl span.ja {
   display: block;
   margin-top: 10px;
-  padding-left: 60px;
+  text-align: center;
   background: url("../../img/base/bg_line_01.gif") 0 center no-repeat;
   font-size: 16px;
   line-height: 1em;
@@ -282,7 +282,6 @@ div#leafVisual nav#tabNav ul li a.cr {
     padding: 60px 0 0 0;
     font-size: 12px;
     line-height: 2em;
-    background: rgba(238,238,238,0.8);
   }
 
   div#leafVisual.brand div.box {
