--- a/css/style.css
+++ b/css/style.css
@@ -131,248 +131,11 @@ body::-webkit-scrollbar-thumb {
 	max-width: 1440px;
 	margin: 0 auto;
 }
-#newsArea {
-	background: linear-gradient(180deg, #ffffff 0%, #ffffff 300px, #e2e2e2 300px, #e2e2e2 100%);
-}
-#newsArea .inner {
-	padding: 150px 3.47vw 0;
-}
-#newsArea .uprBox {
-	overflow: hidden;
-	position: relative;
-}
-#newsArea .inner .secTtl {
-	margin-top: 120px;
-	float: left;
-}
-#newsArea .secTtl h2 {
-	font-size: 4.16vw;
-	letter-spacing: 0.3em;
-	line-height: 1;
-}
-#newsArea .secTtl h2 span {
-	font-size: 2.08vw;
-}
-#newsArea .secTtl h3 {
-	font-size: 1.11vw;
-	position: relative;
-	padding-left: 60px;
-}
-
-@media (min-width: 1440px) {
-#newsArea .secTtl h2 {
-	font-size: 60px;
-}
-#newsArea .secTtl h2 span {
-	font-size: 30px;
-}
-#newsArea .secTtl h3 {
-	font-size: 16px;
-}
-}
-#newsArea .inner .secTtl h3::before {
-	content: '';
-	position: absolute;
-	top: 50%;
-	display: inline-block;
-	width: 50px;
-	height: 1px;
-	background-color: black;
-	left: 0;
-}
-#newsArea .featureNews {
-	float: right;
-	width: 41.66vw;
-	max-width: 600px;
-	position: relative;
-}
-#newsArea .featureNews a {
-	color: #1b1b1b;
-	text-decoration: none;
-	transition: 0.3s;
-}
-#newsArea .featureNews .thumb {
-	box-shadow: 0px 10px 5px -3px rgba(0,0,0,0.1);
-	height: 19.44vw;
-	max-height: 280px;
-	overflow: hidden;
-}
-#newsArea .featureNews .thumb img {
-	width: 100%;
-	height: auto;
-	transition: 0.3s;
-}
-#newsArea .featureNews a:hover img {
-	opacity: 0.7;
-}
-#newsArea .featureNews .ttl {
-	font-size: 16px;
-	font-weight: bold;
-	margin: 20px 0;
-}
-#newsArea .featureNews .txt {
-	font-size: 14px;
-	font-family: "Noto Sans Japanese";
-}
-#newsArea .featureNews .cat {
-	color: #ffffff;
-	background-color: #c9e265;
-	position: absolute;
-	top: 10px;
-	left: 0px;
-	font-size: 12px;
-	font-weight: 600;
-	line-height: 1.2;
-	height: 28px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 80px;
-	text-align: center;
-	padding: 4px;
-}
-#newsArea .catGroup {
-	display: flex;
-}
-#newsArea .tab {
-	list-style: none;
-	border: solid 1px #000;
-	text-align: center;
-	cursor: pointer;
-	width: 9vw;
-	line-height: 1.2;
-	height: 42px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	box-sizing: border-box;
-	background-color: #000;
-	margin-right: 4px;
-	font-size: 16px;
-	letter-spacing: 0.1em;
-	color: #fff;
-}
-#newsArea .contents {
-	border-top: 1px solid #666666;
-}
-#newsArea .panel {
-	display: none;
-}
-#newsArea .tab.is-active {
-	background: #e2e2e2;
-	color: #1b1b1b;
-	transition: all 0.3s ease-out;
-	border: 1px solid #666666;
-	border-bottom: none;
-	margin-bottom: -1px;
-}
 #lip {
 	color: rgb(255, 255, 255);
 }
 #lip:hover {
 	color: rgb(0, 0, 0)
-}
-#newsArea .panel.is-show {
-	display: block;
-}
-#newsArea .panel li {
-	border-bottom: 1px solid #cdcdcd;
-	position: relative;
-	height: 120px;
-}
-#newsArea .panel li:last-child {
-	border: none;
-}
-#newsArea .panel .cat {
-	color: #000000;
-	background-color: #c9e265;
-	font-size: 12px;
-	font-weight: 600;
-	line-height: 1.2;
-	height: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: absolute;
-	top: 50%;
-	left: 20px;
-	transform: translateY(-50%);
-	text-align: center;
-	padding: 4px;
-}
-#newsArea .panel .thumb {
-	width: 120px;
-	height: auto;
-	overflow: hidden;
-	position: absolute;
-	top: 54%;
-	transform: translateY(-54%);
-	left: 130px;
-	text-align: center;
-}
-#newsArea .panel .thumb img {
-	width: 80%;
-	height: auto;
-	transition: 0.3s;
-}
-#newsArea .panel .ttl {
-	font-size: 16px;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 260px;
-	font-weight: bold;
-  margin-right: 100px;
-}
-#newsArea .panel a {
-	color: #1b1b1b;
-	text-decoration: none;
-	display: block;
-	transition: 0.3s;
-}
-#newsArea .panel a:hover img {
-	opacity: 0.7;
-}
-#newsArea .panel a:hover {
-	color: #999999;
-}
-#newsArea .panel .date {
-	color: #949393;
-	font-size: 14px;
-	position: absolute;
-	top: 50%;
-	right: 0;
-	transform: translateY(-50%);
-	letter-spacing: 0.1em;
-}
-#newsArea .moreBtn {
-	position: absolute;
-	top: 19.44vw;
-	left: 0vw;
-}
-
-.newsMoreBtn {
-text-align: center;
-font-family:minion-pro-display,"ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "游明朝体", "Yu Mincho", YuMincho, "Noto Sans Japanese","Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ", Meiryo,"ＭＳ Ｐゴシック", Osaka, sans-serif;
-}
-.newsMoreBtn a {
-display: block;
-background-color: #1b1b1b;
-color: #ffffff;
-text-decoration: none;
-font-size: 14px;
-text-align: center;
-width: 180px;
-line-height: 40px;
-border: 1px solid #1b1b1b;
-box-sizing: border-box;
-transition: 0.3s;
-margin: 30px auto;
-}
-.newsMoreBtn a:hover {
-background-color: inherit;
-color: #1b1b1b;
-box-shadow: 0px 10px 5px -3px rgba(0,0,0,0.1);
 }
 .flex {
 	display: flex;
@@ -914,8 +677,10 @@ footer .socials {
 }
 .logoacc {
 	position: absolute;
-	top: 20%;
-	left: 34%;
+	text-align: center;
+	width: 100%;
+	margin-top: 50vh; /* poussé de la moitié de hauteur de viewport */
+  	transform: translateY(-50%);
 	z-index: 9999;
 }
 footer .socials ul {
