--- a/css/res.css
+++ b/css/res.css
@@ -5,7 +5,7 @@
 .pcHide {
 	display: none;
 }
-
+/*
 @media (min-width: 300px){
 	#storyArea {
 		margin-top: 800px;
@@ -32,7 +32,7 @@
 		margin-top: 650px;
 	}
 }
-
+*/
 
  @media (max-width: 768px) {
 header {
